--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,9 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+			<p> Je m'appelle Maëlle et je suis en formation Data Engineer à l'Ecole de la Data </p>
+		</div>
+		
 	</body>
 </html>
