--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- Description -->
 		<div>
+			<h1> Ma description </h1>
 			<p> Je m'appelle Maëlle et je suis en formation Data Engineer à l'Ecole de la Data </p>
+		</div>
+		
+		<!-- Recompense -->
+		<div>
+			<h1> Mes récompenses </h1>
+			<p> En construction... </p>
 		</div>
 		
 	</body>
