add pull command

--- a/hello.html
+++ b/hello.html
@@ -34,7 +34,12 @@
 			<h1> Mon gist </h1>
 			<p> <script src="https://gist.github.com/MaelleCh/84fb61c14f24a273dfb98e105595a0e9.js"></script> </p>
 		</div>
-		<script src="https://gist.github.com/MaelleCh/84fb61c14f24a273dfb98e105595a0e9.js"></script>
+		
+		<!-- Commandes GIT -->
+		<div>
+			<h1> Mes commandes GIT </h1>
+			<p> git pull </p>
+		</div>
 		
 	</body>
 </html>
